# mmtk-core

./: Cargo.toml  build.rs
src/: memory_manager.rs  mmtk.rs
src/plan/: mod.rs  plan_constraints.rs  tracing.rs
src/plan/immix/: global.rs
src/plan/sticky/immix/: global.rs
src/policy/: copyspace.rs  immortalspace.rs  largeobjectspace.rs  lockfreeimmortalspace.rs  markcompactspace.rs  sft.rs  space.rs
src/policy/immix/: defrag.rs  immixspace.rs  mod.rs
src/policy/mallocspace/: global.rs
src/policy/marksweepspace/malloc_ms/: global.rs
src/policy/marksweepspace/native_ms/: global.rs
src/scheduler/: gc_work.rs  scheduler.rs  work_bucket.rs
src/util/: address.rs  object_forwarding.rs  reference_processor.rs
src/util/alloc/: immix_allocator.rs
src/util/copy/: mod.rs
src/util/heap/: gc_trigger.rs
src/util/metadata/: addr_hashing_bit.rs  header_metadata.rs  mod.rs  pin_bit.rs
src/util/sanity/: heapdump.proto  mod.rs  sanity_checker.rs  shapes.proto
src/util/statistics/: stats.rs
src/vm/: collection.rs  edge_shape.rs  object_model.rs  reference_glue.rs  scanning.rs
tools/heapdump/: Cargo.toml  build.rs
tools/heapdump/src/: main.rs
tools/shapes/: .gitignore  alignment_encoding.yml  alignment_encoding_mixed.yml  alignment_encoding_sunflow.yml  base.yml  requirements.txt  shapes.py  shapes.tsv  shapes_plot.py  visibility.tsv  visibility_plot.py
tools/shapes/util/sanity/: shapes_pb2.py  shapes_pb2.pyi
