[package]
name = "heapdump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
zstd = "0.12"
anyhow = "1.0.75"
libc = "0.2"
lazy_static = "1.4.0"

[build-dependencies]
prost-build = { version = "0.11" }
